etc/kubernetes/manifests/phpinfo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpinfo
spec:
  ports:
    -
      port: 8080
      protocol: TCP
  selector:
    matchLabels:
      phpinfo: true
  type: ClusterIP
