etc/kubernetes/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplilearn-phpinfo
spec:
  ports:
    -
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: simplilearn-phpinfo-2021-07
