etc/kubernetes/manifests/phpinfo-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: phpinfo-netpol
spec:
  ingress:
    -
      ports:
        -
          port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      phpinfo: 'true'
  policyTypes:
    - Ingress
